<resources>
    <string name="app_ver">Alkie 1.0</string>
    <string name="app_name">Alkie</string>

    <string name="already_there">Already there.</string>
    <string name="relative_density">Relative Density</string>
    <string name="calibration_temperature">Calibration temperature</string>
    <string name="original_gravity">Original gravity</string>
    <string name="final_gravity">Final gravity</string>
    <string name="x_xxx">x.xxx</string>
    <string name="xxx_x">xxx.x</string>
    <string name="xx_x">xx.x</string>
    <string name="xxxx_x">xxxx.x</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="honey1">Honey</string>
    <string name="empty">Empty</string>
    <string name="invalid_input">Invalid input</string>
    <string name="select_ingredient">Select a raw material</string>
    <string name="sucrose">Sucrose</string>
    <string name="maltose">Maltose</string>
    <string name="glucose">Glucose</string>
    <string name="fructose">Fructose</string>
    <string name="brown_sugar">Brown sugar</string>
    <string name="molasses">Molasses</string>
    <string name="msyrup1">Maple syrup</string>
    <string name="apple">Apple</string>
    <string name="banana_cavendish">Banana, Cavendish</string>
    <string name="plum">Plum</string>
    <string name="raspberry_wild">Raspberry, wild</string>
    <string name="blueberry_wild">Blueberry, wild</string>
    <string name="strawberry">Strawberry</string>
    <string name="select_raw_material">Select raw material</string>
    <string name="run">Run</string>
    <string name="calibration_ntemperature">Calibration\ntemperature</string>
    <string name="amount">Amount</string>
    <string name="sucrose_c">Sucrose:</string>
    <string name="maltose_c">Maltose:</string>
    <string name="glucose_c">Glucose:</string>
    <string name="fructose_c">Fructose:</string>
    <string name="ethanol_c">Ethanol:</string>
    <string name="co2_c">CO2:</string>
    <string name="fermentable_carbs_c">Total fermentable carbohydrates:</string>
    <string name="_250_ml">250 mL:</string>
    <string name="_330_ml">330 mL:</string>
    <string name="_500_ml">500 mL:</string>
    <string name="_700_ml">700 mL:</string>
    <string name="_750_ml">750 mL:</string>
    <string name="_1000_ml">1000 mL:</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="distillation">Distillation</string>
    <string name="fermentation">Fermentation</string>
    <string name="raw_material_amp_volume_to_abv"><![CDATA[Raw Material & Volume to ABV]]></string>
    <string name="sucrose_tv">Sucrose:</string>
    <string name="maltose_tv">Maltose:</string>
    <string name="glucose_tv">Glucose:</string>
    <string name="fructose_tv">Fructose:</string>
    <string name="ethanol_tv">Ethanol:</string>
    <string name="ferm_carbs">Total fermentable carbohydrates:</string>
    <string name="co2_tv">CO2:</string>
    <string name="abv_tv">ABV:</string>
    <string name="volume">Volume</string>
    <string name="abv">ABV</string>
    <string name="temperature_compensated_nrelative_density">Temperature Compensated\nRelative Density</string>
    <string name="target_abv">Target ABV</string>
    <string name="target_total_volume">Target total volume:</string>
    <string name="target_volume_amp_abv"><![CDATA[Target Volume & ABV]]></string>
    <string name="raw_material_to_abv">Raw Material to ABV</string>
    <string name="target_alcohol_volume">Target Alcohol Volume</string>
    <string name="high_wines_abv_reduction">High Wines ABV Reduction</string>
    <string name="wine_fortification_target_abv">Wine Fortification (Target ABV)</string>
    <string name="weight_amp_volume_to_abv">Density to ABV</string>
    <string name="blending">Blending</string>
    <string name="about">About</string>

</resources>