<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/RelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".MainActivity">

                    <Button
                        android:id="@+id/btn_reldens"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/relative_density"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView28" />

                    <Button
                        android:id="@+id/btn_tempcomp"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/temperature_compensated_nrelative_density"
                        android:textColor="?android:textColor"
                        android:textSize="17sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_reldens" />

                    <Button
                        android:id="@+id/btn_vol_abv"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/target_volume_amp_abv"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_tempcomp" />

                    <Button
                        android:id="@+id/btn_rawmat_abv"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/raw_material_to_abv"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_vol_abv" />

                    <Button
                        android:id="@+id/btn_tot_alc_vol"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/target_alcohol_volume"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_raw_vol_abv" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/fermentation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/distillation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_tot_alc_vol" />

                    <Button
                        android:id="@+id/btn_highwine_reduction"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/high_wines_abv_reduction"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView30" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/miscellaneous"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_highwine_reduction" />

                    <Button
                        android:id="@+id/btn_wine_fort"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/wine_fortification_target_abv"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView32" />

                    <Button
                        android:id="@+id/btn_raw_vol_abv"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/raw_material_amp_volume_to_abv"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_rawmat_abv" />

                    <Button
                        android:id="@+id/btn_blending"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/blending"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_wine_fort" />

                    <Button
                        android:id="@+id/btn_weight_vol"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="?android:buttonStyle"
                        android:text="@string/weight_amp_volume_to_abv"
                        android:textColor="?android:textColor"
                        android:textSize="20sp"
                        android:visibility="gone"
                        app:cornerRadius="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_blending" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="NotSibling">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </ScrollView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>