<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include7"
        android:layout_marginTop="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".rawmat_volume_to_abv">

            <TextView
                android:id="@+id/textView82"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="Target Volume"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_targvol2"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="45dp"
                android:backgroundTint="?android:textColor"
                android:ems="10"
                android:hint="@string/xxxx_x"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_matselect_4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="?android:buttonStyle"
                android:text="@string/select_raw_material"
                android:textColor="?android:textColor"
                app:cornerRadius="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView82" />

            <EditText
                android:id="@+id/et_rawmat2"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="45dp"
                android:backgroundTint="?android:textColor"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_targvol2" />

            <View
                android:id="@+id/divider15"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="150dp"
                android:background="?android:textColorHint"
                android:backgroundTint="?android:textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider16"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="196dp"
                android:background="?android:textColorHint"
                android:backgroundTint="?android:textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider15" />

            <Button
                android:id="@+id/btn_run_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:backgroundTint="?android:buttonStyle"
                android:text="@string/run"
                android:textColor="?android:textColor"
                android:textSize="20sp"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider16" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/abv_tv"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider16" />

            <TextView
                android:id="@+id/tv_abv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider16" />

            <TextView
                android:id="@+id/tv_matunit_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/et_rawmat2"
                app:layout_constraintTop_toBottomOf="@+id/textView85" />

            <TextView
                android:id="@+id/textView85"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="mL"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/et_targvol2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView83"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/sucrose_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider15" />

            <TextView
                android:id="@+id/textView84"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/glucose_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView83" />

            <TextView
                android:id="@+id/textView86"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/ethanol_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView84" />

            <TextView
                android:id="@+id/textView87"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/ferm_carbs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView86" />

            <TextView
                android:id="@+id/tv_sucrose5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@+id/textView83"
                app:layout_constraintTop_toBottomOf="@+id/divider15" />

            <TextView
                android:id="@+id/tv_glucose5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@+id/textView84"
                app:layout_constraintTop_toBottomOf="@+id/tv_sucrose5" />

            <TextView
                android:id="@+id/tv_alc_tot5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@+id/textView86"
                app:layout_constraintTop_toBottomOf="@+id/tv_glucose5" />

            <TextView
                android:id="@+id/tv_maltose5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider15" />

            <TextView
                android:id="@+id/tv_fructose5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_maltose5" />

            <TextView
                android:id="@+id/tv_co25"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fructose5" />

            <TextView
                android:id="@+id/textView97"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/maltose_tv"
                app:layout_constraintEnd_toStartOf="@+id/tv_maltose5"
                app:layout_constraintTop_toBottomOf="@+id/divider15" />

            <TextView
                android:id="@+id/textView98"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fructose_tv"
                app:layout_constraintEnd_toStartOf="@+id/tv_fructose5"
                app:layout_constraintTop_toBottomOf="@+id/textView97" />

            <TextView
                android:id="@+id/textView99"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/co2_tv"
                app:layout_constraintEnd_toStartOf="@+id/tv_co25"
                app:layout_constraintTop_toBottomOf="@+id/textView98" />

            <TextView
                android:id="@+id/textView100"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/_250_ml"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView87" />

            <TextView
                android:id="@+id/textView101"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/_330_ml"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView100" />

            <TextView
                android:id="@+id/textView102"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/_500_ml"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView101" />

            <TextView
                android:id="@+id/bot5_250ml"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@+id/textView100"
                app:layout_constraintTop_toBottomOf="@+id/textView87" />

            <TextView
                android:id="@+id/bot5_330ml"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@+id/textView101"
                app:layout_constraintTop_toBottomOf="@+id/bot5_250ml" />

            <TextView
                android:id="@+id/bot5_500ml"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="textEnd"
                app:layout_constraintStart_toEndOf="@+id/textView102"
                app:layout_constraintTop_toBottomOf="@+id/bot5_330ml" />

            <TextView
                android:id="@+id/tv_fermcarbs"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_co25" />

            <TextView
                android:id="@+id/bot5_700ml"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fermcarbs" />

            <TextView
                android:id="@+id/bot5_750ml"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bot5_700ml" />

            <TextView
                android:id="@+id/bot5_1000ml"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bot5_750ml" />

            <TextView
                android:id="@+id/textView110"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/_700_ml"
                app:layout_constraintEnd_toStartOf="@+id/bot5_700ml"
                app:layout_constraintTop_toBottomOf="@+id/textView87" />

            <TextView
                android:id="@+id/textView111"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_750_ml"
                app:layout_constraintEnd_toStartOf="@+id/bot5_750ml"
                app:layout_constraintTop_toBottomOf="@+id/textView110" />

            <TextView
                android:id="@+id/textView112"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_1000_ml"
                app:layout_constraintEnd_toStartOf="@+id/bot5_1000ml"
                app:layout_constraintTop_toBottomOf="@+id/textView111" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/include7"
        layout="@layout/toolbar" />


</RelativeLayout>